Fixed about us page issues listed by Minjie

--- a/about-us.html
+++ b/about-us.html
@@ -66,9 +66,9 @@
                 built from this vision. It’s a part of who we are, we are what we do. Finding that true pathway
                 however, requires experiences that many young people aren’t able to find. </p>
             <p class="quote">
-                “We wanted to create something more accessible, that helped people get to where
-                they needed to be”
-                <span class="author">— Gloria Li, Co-Founder</span>
+                <i>“We wanted to create something more accessible, that helped people get to where
+                    they needed to be”</i>
+                <i><span class="author">— Gloria Li, Co-Founder</span></i>
             </p>
             <p>That’s why we built 2hats. We want to give every student the opportunity to achieve their full
                 potential, to discover their purpose and where they can have the greatest impact. Finding true passion
@@ -93,7 +93,7 @@
         <h2>How Far We’ve Come</h2>
         <div class="step step-1">
             <!-- <div class="step-date">September 2017</div> -->
-            <div class="step-date">Sept 2017</div>
+            <div class="step-date">Sep 2017</div>
             <div class="step-description">We began generating our idea for a career development service for
                 businesses and students</div>
         </div>
@@ -265,10 +265,9 @@
         <div class="container">
             <h2>Contact Us</h2>
             <div class="contact-details">
-                <p>Address:
-                    Suite 703
-                    50 Clarence St
-                    Sydney NSW 2000
+                <p>Address:<br>
+                    66-68 Devonshire Street<br>
+                    SURRY HILLS, NSW 2010
                 </p>
                 <p>
 
