--- a/company.html
+++ b/company.html
@@ -181,8 +181,8 @@
                             finished their placement period.</p>
                     </div>
                 </div>
-                <p>"The placement that I got through 2hats really helped to shape me - I was able to get a head start
-                    in my career and helped me develop more interpersonal skills.”</p>
+                <p><i>"The placement that I got through 2hats really helped to shape me - I was able to get a head start
+                    in my career and helped me develop more interpersonal skills."</i></p>
                 <p class="customer-name">Stella Lee. , Property Intern at Future Pacific</p>
             </div>
         </div>
@@ -190,9 +190,9 @@
 
     <section class="cta companies-cta text-center">
         <div class="container">
-            <h2>Become a paid SuperIntern through 2hats today!</h2>
-            <button class="btn primary-button">Sign Up</button>
-            <button class="btn primary-button learn-more">Learn More</button>
+            <h2>Get your SuperInterns through 2hats today!</h2>
+            <a href="mailto:info@2hats.com.au"><button class="btn primary-button">Contact Us</button></a>
+            <a href=""><button class="btn primary-button learn-more">Learn More</button></a>
         </div>
     </section>
 
