--- a/index.html
+++ b/index.html
@@ -165,6 +165,15 @@
                         <a href="mailto:info@2hats.com.au" class="mail">info@2hats.com.au</a>
                     </p>
                 </div>
+                <div class="col col-1x follow-us visible-sm">
+                    <h4>Follow Us</h4>
+                    <a href="https://www.facebook.com/2hats.com.au/">
+                        <img src="img/facebook.svg" alt="">
+                    </a>
+                    <a href="https://www.linkedin.com/company/2hats-von-technology/">
+                        <img src="img/linkedin.svg" alt="">
+                    </a>
+                </div>
                 <div class="col col-1x menu-links">
                     <ul>
                         <li>
@@ -197,7 +206,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col col-1x follow-us">
+                <div class="col col-1x follow-us hidden-sm">
                     <h4>Follow Us</h4>
                     <a href="https://www.facebook.com/2hats.com.au/">
                         <img src="img/facebook.svg" alt="">
