--- a/about-us.html
+++ b/about-us.html
@@ -292,11 +292,19 @@
             <div class="row">
                 <div class="col col-2x company-info">
                     <img src="img/company-logo.png" alt="" class="company-logo">
-                    <p><span>Any questions? Let's chat!</span> Chat with us using the widget at the bottom-right of the
-                        page, or shoot us
+                    <p><span>Any questions? Let's chat!</span> Chat with us using the widget at the bottom-right of the page, or shoot us
                         an email at
                         <a href="mailto:info@2hats.com.au" class="mail">info@2hats.com.au</a>
                     </p>
+                </div>
+                <div class="col col-1x follow-us visible-sm">
+                    <h4>Follow Us</h4>
+                    <a href="https://www.facebook.com/2hats.com.au/">
+                        <img src="img/facebook.svg" alt="">
+                    </a>
+                    <a href="https://www.linkedin.com/company/2hats-von-technology/">
+                        <img src="img/linkedin.svg" alt="">
+                    </a>
                 </div>
                 <div class="col col-1x menu-links">
                     <ul>
@@ -330,7 +338,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col col-1x follow-us">
+                <div class="col col-1x follow-us hidden-sm">
                     <h4>Follow Us</h4>
                     <a href="https://www.facebook.com/2hats.com.au/">
                         <img src="img/facebook.svg" alt="">
