Fixed issues listed by Mibjie/Jack on Sept 26

--- a/company.html
+++ b/company.html
@@ -181,8 +181,8 @@
                             finished their placement period.</p>
                     </div>
                 </div>
-                <p><i>"The placement that I got through 2hats really helped to shape me - I was able to get a head start
-                    in my career and helped me develop more interpersonal skills."</i></p>
+                <p class="testimonial">"The placement that I got through 2hats really helped to shape me - I was able to get a head start
+                    in my career and helped me develop more interpersonal skills."</p>
                 <p class="customer-name">Stella Lee. , Property Intern at Future Pacific</p>
             </div>
         </div>
