--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     <img src="img/home-oval.png" alt="">
                     <img src="img/home-future-pacific-logo.png" alt="" class="future-pacific-logo">
                 </div>
-                <p>"The placement that I got through 2hats really helped to shape me - I was able to get a head start in my
+                <p class="testimonial">"The placement that I got through 2hats really helped to shape me - I was able to get a head start in my
                     career and helped me develop more interpersonal skills.”</p>
                 <p class="customer-name">Stella Lee, Property Officer at Future Pacific</p>
             </div>
